
AM_CPPFLAGS = -I${top_srcdir}
AM_LDFLAGS = -release $(PACKAGE_VERSION)
includedir = $(prefix)/include/qla

lib_LTLIBRARIES = libQuantLibAddin.la

EXTRA_DIST = \
    autolink.hpp

include_HEADERS = \
    asianoption.hpp \
    basic.hpp \
    baseinstruments.hpp \
    barrieroption.hpp \
    basketoption.hpp \
    capfloor.hpp \
    cliquetoption.hpp \
    clientutils.hpp \
    config.hpp \
    couponvectors.hpp \
    dividendvanillaoption.hpp \
    fixedcouponbond.hpp \
    forwardvanillaoption.hpp \
    generalutils.hpp \
    instruments.hpp \
    interpolation.hpp \
    ohfunctions.hpp \
    options.hpp \
    processes.hpp \
    qladdin.hpp \
    qladdindefines.hpp \
    schedule.hpp \
    shortratemodels.hpp \
    simpleswap.hpp \
    swap.hpp \
    termstructures.hpp \
    typefactory.hpp \
    typeregistry.hpp \
    utilities.hpp \
    vanillaoption.hpp \
    volatilities.hpp \
    xibor.hpp \
    zerocouponbond.hpp \
    zerocurve.hpp \
    baseinstruments.hpp \
    vo_basic.hpp \
    vo_capfloor.hpp \
    vo_couponvectors.hpp \
    vo_instruments.hpp \
    vo_interpolation.hpp \
    vo_ohfunctions.hpp \
    vo_options.hpp \
    vo_processes.hpp \
    vo_schedule.hpp \
    vo_shortratemodels.hpp \
    vo_simpleswap.hpp \
    vo_swap.hpp \
    vo_termstructures.hpp \
    vo_utilities.hpp \
    vo_volatilities.hpp \
    vo_xibor.hpp

libQuantLibAddin_la_SOURCES = \
    asianoption.cpp \
    basic.cpp \
    barrieroption.cpp \
    basketoption.cpp \
    capfloor.cpp \
    cliquetoption.cpp \
    clientutils.cpp \
    complextyperegistry.cpp \
    couponvectors.cpp \
    dividendvanillaoption.cpp \
    enumregistry.cpp \
    fixedcouponbond.cpp \
    forwardvanillaoption.cpp \
    generalutils.cpp \
    ohfunctions.cpp \
    interpolation.cpp \
    processes.cpp \
    schedule.cpp \
    shortratemodels.cpp \
    simpleswap.cpp \
    swap.cpp \
    termstructures.cpp \
    utilities.cpp \
    vanillaoption.cpp \
    volatilities.cpp \
    xibor.cpp \
    zerocouponbond.cpp \
    zerocurve.cpp \
    vo_basic.cpp \
    vo_capfloor.cpp \
    vo_couponvectors.cpp \
    vo_instruments.cpp \
    vo_interpolation.cpp \
    vo_ohfunctions.cpp \
    vo_options.cpp \
    vo_processes.cpp \
    vo_schedule.cpp \
    vo_shortratemodels.cpp \
    vo_simpleswap.cpp \
    vo_swap.cpp \
    vo_termstructures.cpp \
    vo_utilities.cpp \
    vo_volatilities.cpp \
    vo_xibor.cpp

