
AM_CPPFLAGS = -I${top_srcdir}
AM_LDFLAGS = -release $(PACKAGE_VERSION)
includedir = $(prefix)/include/qla

lib_LTLIBRARIES = libQuantLibAddin.la

EXTRA_DIST = \
    autolink.hpp

include_HEADERS = \
    asianoption.hpp \
    barrieroption.hpp \
    baseinstruments.hpp \
    basic.hpp \
    capfloor.hpp \
    clientutils.hpp \
    cliquetoption.hpp \
    config.hpp \
    couponvectors.hpp \
    dividendvanillaoption.hpp \
    europeanoption.hpp \
    exercise.hpp \
    fixedcouponbond.hpp \
    forwardvanillaoption.hpp \
    generalutils.hpp \
    instruments.hpp \
    interpolation.hpp \
    options.hpp \
    processes.hpp \
    qladdindefines.hpp \
    qladdin.hpp \
    quantoforwardvanillaoption.hpp \
    quantovanillaoption.hpp \
    randomsequencegenerator.hpp \
    schedule.hpp \
    shortratemodels.hpp \
    simpleswap.hpp \
    swap.hpp \
    termstructures.hpp \
    typefactory.hpp \
    typeregistry.hpp \
    utilities.hpp \
    vanillaoption.hpp \
    vo_capfloor.hpp \
    vo_couponvectors.hpp \
    vo_exercise.hpp \
    vo_instruments.hpp \
    vo_interpolation.hpp \
    volatilities.hpp \
    vo_options.hpp \
    vo_processes.hpp \
    vo_randomsequencegenerator.hpp \
    vo_schedule.hpp \
    vo_shortratemodels.hpp \
    vo_simpleswap.hpp \
    vo_swap.hpp \
    vo_termstructures.hpp \
    vo_volatilities.hpp \
    vo_xibor.hpp \
    xibor.hpp \
    zerocouponbond.hpp \
    zerocurve.hpp

libQuantLibAddin_la_SOURCES = \
    asianoption.cpp \
    barrieroption.cpp \
    basic.cpp \
    capfloor.cpp \
    clientutils.cpp \
    cliquetoption.cpp \
    complextyperegistry.cpp \
    couponvectors.cpp \
    dividendvanillaoption.cpp \
    enumregistry.cpp \
    europeanoption.cpp \
    exercise.cpp \
    fixedcouponbond.cpp \
    forwardvanillaoption.cpp \
    generalutils.cpp \
    interpolation.cpp \
    processes.cpp \
    quantoforwardvanillaoption.cpp \
    quantovanillaoption.cpp \
    randomsequencegenerator.cpp \
    schedule.cpp \
    shortratemodels.cpp \
    simpleswap.cpp \
    swap.cpp \
    termstructures.cpp \
    utilities.cpp \
    vanillaoption.cpp \
    vo_capfloor.cpp \
    vo_couponvectors.cpp \
    vo_exercise.cpp \
    vo_instruments.cpp \
    vo_interpolation.cpp \
    volatilities.cpp \
    vo_options.cpp \
    vo_processes.cpp \
    vo_randomsequencegenerator.cpp \
    vo_schedule.cpp \
    vo_shortratemodels.cpp \
    vo_simpleswap.cpp \
    vo_swap.cpp \
    vo_termstructures.cpp \
    vo_volatilities.cpp \
    vo_xibor.cpp \
    xibor.cpp \
    zerocouponbond.cpp \
    zerocurve.cpp

